# glyphcast

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  client.py  example.env  example.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  resvg_py.pyi  sparkfish.json
.github/workflows/: CI.yml  lint.yml  test.yml
glyphcast/: constants.py  converters.py  formats.py  utils.py
server/: LICENSE  README.md  requirements.txt
server/glyphcast/: converters.py  formats.py  utils.py
src/: lib.rs  options.rs
tests/: test_render.py
